# qt-os-aurora

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
01-calculator/: CMakeLists.txt  README.md  calculator.cpp  calculator.h  calculator.ui
02-progress/: CMakeLists.txt  README.md  progress_widget.cpp  progress_widget.h
03-volers/: CMakeLists.txt  README.md  main.cpp  resources.qrc  significant-volcanic-eruption-database.csv
04-qmlcalc/: CMakeLists.txt  README.md  calc.cpp  calc.h  calc.qml  main.cpp  resources.qrc
04-qmlcalc/qml/: app.qml
05-weather/: CMakeLists.txt  README.md  main.cpp  weather.cpp  weather.h
06-silica/: CMakeLists.txt  README.md  SilicaApp.desktop  main.cpp
06-silica/qml/: SilicaApp.qml
06-silica/qml/cover/: CoverPage.qml
06-silica/qml/pages/: AccountPage.qml  RegisterPage.qml
06-silica/rpm/: SilicaApp.spec
07-localstorage/: CMakeLists.txt  NotesApp.desktop  README.md  main.cpp
07-localstorage/qml/: Dao.qml  NotesApp.qml
07-localstorage/qml/cover/: CoverPage.qml
07-localstorage/qml/dialogs/: AddNote.qml
07-localstorage/qml/pages/: Notes.qml
07-localstorage/rpm/: NotesApp.spec
08-geolocation/: CMakeLists.txt  MapApp.desktop  README.md
08-geolocation/nmea/: path.nmea
08-geolocation/qml/: MapApp.qml
08-geolocation/qml/pages/: MapPage.qml  PositioningPage.qml
08-geolocation/rpm/: MapApp.spec
10-locale/: CMakeLists.txt  LocaleApp.desktop  LocaleApp.ts  LocaleApp_ru.ts  README.md
10-locale/qml/cover/: CoverPage.qml
10-locale/qml/pages/: AccountPage.qml  RegisterPage.qml
10-locale/rpm/: LocaleApp.spec
calc/: CMakeLists.txt  README.md  calculator.cpp  calculator.h  calculator.ui  main.cpp
calc/src/: main.cpp
cmake/: os_release_info.cmake
progress/: CMakeLists.txt  main.cpp  progress_widget.cpp  progress_widget.h
